control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_Public_KAS_Route/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_Public_with_KAS_Route_route_ignition_server.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    hypershift.openshift.io/hosted-control-plane: hcp-namespace
  name: ignition-server
  namespace: hcp-namespace
  resourceVersion: "1"
spec:
  host: ignition.example.com
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: ignition-server-proxy
    weight: null
status: {}
