control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_Public_KAS_Route/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_Public_with_KAS_Route_routes.yaml
apiVersion: route.openshift.io/v1
items:
- metadata:
    labels:
      hypershift.openshift.io/hosted-control-plane: hcp-namespace
    name: ignition-server
    namespace: hcp-namespace
    resourceVersion: "1"
  spec:
    host: ignition.example.com
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: ignition-server-proxy
      weight: null
  status: {}
- metadata:
    annotations:
      haproxy.router.openshift.io/balance: roundrobin
    labels:
      hypershift.openshift.io/hosted-control-plane: hcp-namespace
    name: konnectivity-server
    namespace: hcp-namespace
    ownerReferences:
    - apiVersion: hypershift.openshift.io/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: HostedControlPlane
      name: hcp
      uid: ""
    resourceVersion: "1"
  spec:
    host: konnectivity.example.com
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: konnectivity-server
      weight: null
  status: {}
- metadata:
    labels:
      hypershift.openshift.io/hosted-control-plane: hcp-namespace
    name: kube-apiserver
    namespace: hcp-namespace
    ownerReferences:
    - apiVersion: hypershift.openshift.io/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: HostedControlPlane
      name: hcp
      uid: ""
    resourceVersion: "1"
  spec:
    host: api.example.com
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: kube-apiserver
      weight: null
  status: {}
- metadata:
    labels:
      hypershift.openshift.io/hosted-control-plane: hcp-namespace
      hypershift.openshift.io/internal-route: "true"
    name: kube-apiserver-internal
    namespace: hcp-namespace
    ownerReferences:
    - apiVersion: hypershift.openshift.io/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: HostedControlPlane
      name: hcp
      uid: ""
    resourceVersion: "1"
  spec:
    host: api.hcp.hypershift.local
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: kube-apiserver
      weight: null
  status: {}
- metadata:
    labels:
      hypershift.openshift.io/hosted-control-plane: hcp-namespace
    name: oauth
    namespace: hcp-namespace
    ownerReferences:
    - apiVersion: hypershift.openshift.io/v1beta1
      blockOwnerDeletion: true
      controller: true
      kind: HostedControlPlane
      name: hcp
      uid: ""
    resourceVersion: "1"
  spec:
    host: oauth.example.com
    tls:
      insecureEdgeTerminationPolicy: None
      termination: passthrough
    to:
      kind: Service
      name: oauth-openshift
      weight: null
  status: {}
kind: RouteList
metadata: {}
