control-plane-operator/controllers/hostedcontrolplane/testdata/router-infra/AWS_Public_KAS_Route/zz_fixture_TestRouterInfrastructureWithStrategies_When_AWS_is_Public_with_KAS_Route_services.yaml
apiVersion: v1
items:
- metadata:
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-type: nlb
    labels:
      app: private-router
    name: router
    namespace: hcp-namespace
    resourceVersion: "1"
  spec:
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app: private-router
    type: LoadBalancer
  status:
    loadBalancer: {}
kind: ServiceList
metadata: {}
